# ledger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: router.py
app/api/handlers/: admin_handler.py  payment_handler.py
app/db/: connection.py
app/payment/domain/: fingerprint.py  states.py  test_fingerprint.py  test_states.py
app/payment/domain/entities/: attempt.py  idempotency_key.py  payment.py  test_idempotency_key.py
app/payment/infra/: idgen.py  processor_client.py  unit_of_work.py
app/payment/infra/repositories/: attempts_repo.py  keys_repo.py  payments_repo.py
app/payment/usecases/create_payment/: dtos.py  errors.py  interfaces.py  service.py  test_create_payment.py
app/payment/usecases/drive_payment/: dtos.py  interfaces.py  service.py  test_drive_payment.py
app/payment/usecases/get_payment/: dtos.py  errors.py  interfaces.py  service.py  test_get_payment.py
app/payment/usecases/inspect_key/: dtos.py  errors.py  interfaces.py  service.py  test_inspect_key.py
app/payment/usecases/reconcile/: dtos.py  errors.py  service.py
app/payment/usecases/recover_stale/: dtos.py  errors.py  interfaces.py  service.py  test_recover_stale.py
app/shared/: response.py  result.py
migrations/: 001_init.sql
processor_mock/: Dockerfile  main.py
tests/: conftest.py  test_concurrency.py  test_fingerprint.py  test_happy_path.py  test_in_flight.py  test_recovery.py
web/: index.html
worker/: main.py
